--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uuid: ^3.0.7
   google_fonts: ^4.0.4
   flutter_riverpod: ^2.3.6
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
